Bug 101709 - [llvmpipe] piglit gl-1.0-scissor-offscreen regression
Summary: [llvmpipe] piglit gl-1.0-scissor-offscreen regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: 17.2
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks: 101911
  Show dependency treegraph
 
Reported: 2017-07-06 18:00 UTC by Vinson Lee
Modified: 2017-08-30 02:51 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2017-07-06 18:00:36 UTC
mesa: c5d0dc7fa5566941a49ede8c83a0cfe0a33a3d7f (master 17.2.0-devel)

$ ./bin/gl-1.0-scissor-offscreen -fbo -auto
Probe color at (0,0)
  Expected: 1.000000 1.000000 1.000000
  Observed: 1.000000 0.000000 0.000000
PIGLIT: {"result": "fail" }


743ad599a97d09b119d26b99f6b79e41b567e421 is the first bad commit
commit 743ad599a97d09b119d26b99f6b79e41b567e421
Author: Marek Olšák <marek.olsak@amd.com>
Date:   Wed Jun 14 23:09:24 2017 +0200

    st/mesa: don't set 16 scissors and 16 viewports if they're unused
    
    Only do so if there is a shader writing gl_ViewportIndex.
    This removes a lot of CPU overhead for the most common case.
    
    Reviewed-by: Nicolai Hähnle <nicolai.haehnle@amd.com>

:040000 040000 34a059a5354c760fe20f6cbf2b6a823bd075f21d 6a4fbdf3efb3fee9902a32873c41449c7b118c0c M	src
bisect run success
Comment 1 Brian Paul 2017-08-24 15:10:14 UTC
Vinson, this test seems to pass for me with current Mesa (fe2f5cfdc7).  Can you re-test and close this if it's OK for you?
Comment 2 Vinson Lee 2017-08-28 18:48:05 UTC
(In reply to Brian Paul from comment #1)
> Vinson, this test seems to pass for me with current Mesa (fe2f5cfdc7).  Can
> you re-test and close this if it's OK for you?

Retested with Mesa 17.3.0-devel (git-63e79a8a77) and 'gl-1.0-scissor-offscreen -fbo -auto' still fails.
Comment 3 Brian Paul 2017-08-28 20:20:28 UTC
OK, I must have had something wrong.  I see the issue.  Patch posted to mesa-dev for review.
Comment 4 Brian Paul 2017-08-30 02:51:04 UTC
Fixed w/ commit 88cdf16871a0f1cd8ec3844072051ee38e945600


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.